<resources>
    <string name="app_name">Chat App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="login">LogIn</string>
    <string name="password">Password</string>
    <string name="loginbtn">Login</string>
    <string name="textview">TextView</string>
    <string name="message">Message</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="emailR">Email</string>
    <string name="passwordR">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="registerB">Register</string>
    <string name="you_already_have_an_account_sign_in">You already have an account, sign in</string>
    <string name="profile_name">TextView</string>
    <string name="todo">TODO</string>
    <string name="dasdasdasdasdasda">Dasdasdasdasdasda</string>
    <string name="todo2">TODO</string>
    <string name="hello">Hello</string>
    <string name="status">Status</string>
    <string name="logout">Log Out</string>
    <string name="i_don_t_have_an_account_registar">I don\'t have an account , registar</string>
    <string name="edit">Edit</string>
    <string name="ime_korisnika">Ime korisnika</string>
    <string name="new_username">New Username</string>
    <string name="new_email">New Email</string>
    <string name="new_password">New Password</string>
    <string name="delete">Delete</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
</resources>