<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MessageActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        android:minHeight="?attr/actionBarSize"
        android:padding="10dp"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/chatImage"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:src="@mipmap/ic_launcher"
            tools:ignore="ImageContrastCheck"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="-28dp" />

        <TextView
            android:id="@+id/chatName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="30dp"
            android:text="@string/status"
            android:textColor="#000000"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/messageR"
        android:layout_width="match_parent"
        android:layout_height="567dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <RelativeLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <EditText
        android:id="@+id/messageText"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/message"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.888"
        tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/sendBtn"
            android:layout_width="67dp"
            android:src="@drawable/baseline_send_24"
            android:layout_height="48dp"
            android:layout_alignEnd="@+id/messageText"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="-71dp"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck,ImageContrastCheck,VisualLintBounds" />


    </RelativeLayout>

</LinearLayout>

